--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "aws-amplify": "^4.3.10",
     "graphql": "^15.8.0",
+    "graphql-upload": "^13.0.0",
+    "image-capture": "^0.4.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
