--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1",
+    "react-image-file-resizer": "^0.4.8",
     "react-select": "^5.2.2",
     "urql": "^2.2.0",
     "xlsx": "^0.17.4"
